Improve tab title visibility and adjust scroll arrow scroll step Fixes #2554 Fixes #2553

--- a/scss/components/_tabBar.scss
+++ b/scss/components/_tabBar.scss
@@ -89,8 +89,8 @@
 	border-top: 2px solid transparent;
 	color: #000;
 	text-align: center;
-	padding: 0 30px;
-	min-width: 100px;
+	padding: 0 22px;
+	min-width: 110px;
 	
 	&:not(:last-child) {
 		border-inline-end: $tab-border;
